Responsive mit Inhalt

--- a/Tobi/styletest.html
+++ b/Tobi/styletest.html
@@ -4,7 +4,8 @@
 </head>
 <body>
 <div id="container">
-	<nav>
+	<div id="head"></div>
+    <nav>
 		<ul>
 			<li><a href="home.html">Produkte</a></li>
 			<li><a href="products.html">Recyclingh&ouml;fe</a></li>
@@ -12,7 +13,6 @@
 			<li><a href="help.html">Kunden</a></li>
 		</ul>
 	</nav>
-<div id="head"><a href="../../../../../../Desktop/JOBs/Uschi Faltenbacher/ web/images/logo.png"</div>
 <div id="content">
 
 <div id="hersteller">
