--- a/Doku/XML Linking Language (XLink) Version 1.1.html
+++ b/Doku/XML Linking Language (XLink) Version 1.1.html
@@ -375,6 +375,13 @@ Hier ist der Inhalt der recyclinghofID von der Verarbeitung des XML-Pasers ausge
 <div class="div1">
 <h2><a name="xslt" id="xslt"/>7 Entwicklung der Views mit XSLT</h2>
 <h3><a name="xslt-geraeteliste" id="xslt-geraeteliste"></a>7.1 Geräteliste</h3>
+<p>
+  <figure> 
+    <img src="img/geraeteliste.png" alt="Geräteliste" />
+    <figcaption><span>Abbildung 4: <abbr title="Geräteliste">Geräteliste</abbr></span></figcaption>
+  <figure> 
+</p>
+
 <h3><a name="xslt-herstelleruebersicht" id="xslt-herstelleruebersicht"></a>7.2 Herstellerübersicht</h3>
 <h3><a name="xslt-kundenliste" id="xslt-kundenliste"></a>7.3 Kundenliste</h3>
 <h3><a name="xslt-kundenrecyclinghof" id="xslt-kundenrecyclinghof"></a>7.4 Übersicht Kunden-Recyclinghof</h3>
