--- a/Doku/XML Linking Language (XLink) Version 1.1.html
+++ b/Doku/XML Linking Language (XLink) Version 1.1.html
@@ -389,14 +389,26 @@ count(bestandteile/bestandteil), '###,###,##0.00')"
 </p>
 
 <h3><a name="xslt-herstelleruebersicht" id="xslt-herstelleruebersicht"></a>7.2 Herstellerübersicht</h3>
+<p>
+  <figure> 
+    <img src="img/kundenliste.png" alt="Kundenliste" />
+    <figcaption><span>Abbildung 5: <abbr title="Herstellerliste">Herstellerliste</abbr></span></figcaption>
+  </figure> 
+</p>
 <h3><a name="xslt-kundenliste" id="xslt-kundenliste"></a>7.3 Kundenliste</h3>
 <p>
   <figure> 
     <img src="img/kundenliste.png" alt="Kundenliste" />
-    <figcaption><span>Abbildung 5: <abbr title="Geräteliste">Kundenliste</abbr></span></figcaption>
+    <figcaption><span>Abbildung 6: <abbr title="Geräteliste">Kundenliste</abbr></span></figcaption>
   </figure> 
 </p>
 <h3><a name="xslt-kundenrecyclinghof" id="xslt-kundenrecyclinghof"></a>7.4 Übersicht Kunden-Recyclinghof</h3>
+<p>
+  <figure> 
+    <img src="img/kundenliste.png" alt="Kundenliste" />
+    <figcaption><span>Abbildung 7: <abbr title="KundeRecyclinghof">Recyclinghof für Kunde</abbr></span></figcaption>
+  </figure> 
+</p>
 </div> 
 
 <div class="div1">
