--- a/Doku/XML Linking Language (XLink) Version 1.1.html
+++ b/Doku/XML Linking Language (XLink) Version 1.1.html
@@ -740,7 +740,203 @@ datenbank.xml:11: parser error : Start tag expected, '<' not found
 <p>Um die Daten aus unserer XML-Datenstruktur benutzerfreundlich zu repräsentieren wurden Ansichten (Views) mit XSLT (Extensible Stylesheet Language Transformations) entwickelt. Mit XSLT ist es möglich mit einfachen Mitteln Daten aus einer oder mehreren XML-Dateien in einem Browser formatiert darzustellen.</p> 
 <p>Bei der Entwicklung wurde darauf geachtet, dass die Darstellung auf mobilen Geräten sowie Desktop PCs gut leserlich und passend ist.</p> 
 <p>Im Rahmen unseres Projekts wurden mehrere verschiedene Views erstellt, die unsere Daten darstellen. Diese Ansichten werden in den folgenden Abschnitten beschrieben.</p>
-<h3><a name="xslt-geraeteliste" id="xslt-geraeteliste"></a>8.1 Geräteliste</h3>
+<h3><a name="xslt-geraeteliste" id="xslt-vorbereitung"></a>8.1 Vorbereitung</h3>
+<h4>8.1.1 CSS</h4>
+<p>Um ein möglichst übersichtliches XSL-Dokument zu erhalten haben wir so gut wie alle Styles in ein externes CSS-Dokument ausgelagert</p>
+<pre>
+@charset "UTF-8";
+/* CSS Document */
+/* Cool */
+
+html {
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+
+body {
+	background-color: #EBE8E4;
+	color: #222;
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+	font-weight: 300;
+	font-size: 12px;
+	margin:20px;
+}
+
+a {
+	color:#000;
+	text-decoration: none;
+}
+
+a:hover{
+	text-decoration: underline;
+}
+
+h1{
+	font-size:15px;
+	padding:0;
+	margin:0;
+	margin: 0px;
+	padding:0px;
+	color:#333;
+	text-transform: uppercase;
+	/*border-bottom: solid 1px #CCC;*/
+}
+
+h2{
+	font-size:12px;
+	padding:0;
+	margin:0;
+	padding:0px;
+	color:#666;
+	text-transform: uppercase;
+	border-bottom: solid 1px #CCC;
+}
+
+h3{
+	font-size:12px;
+	padding:0;
+	margin:0;
+	margin: 15px 0px 10px 0px;
+	padding-bottom:5px;
+	color:#999;
+	text-transform: uppercase;
+	border-bottom: dotted 1px #CCC;
+}
+
+nav {
+  display: block;
+  overflow: hidden;
+  width: 100%;
+  height: 40px;
+}
+
+ nav ul {
+    margin: 0;
+    padding: 5px;
+  }
+
+    nav ul li {
+      display: inline-block;
+      list-style-type: none;
+      margin-right: 10px;
+    }
+
+#container {
+	position: relative;
+	margin:0 auto;
+	width: 100%;
+}
+
+#head {
+	position:relative;
+	float:left;
+	width: 100%;
+	height:100px;
+}
+
+#geraete {
+	position:relative;
+	float:left;
+	padding-left:5px;
+	width: 100%;
+	min-height: 100px;
+	border: solid 1px #CCC;
+	background-color: #FEFEFE;
+	margin-right:10px;
+	margin-bottom: 10px;
+}
+
+#recyclinghof {
+	position:relative;
+	float:left;
+	padding-left:5px;
+	width: 100%;
+	min-height: 100px;
+	border: solid 1px #CCC;
+	background-color: #FEFEFE;
+	margin-right:10px;
+	margin-bottom: 10px;
+}
+
+
+@media only screen and (min-width: 768px) {
+ 
+nav {
+  display: block;
+  overflow: hidden;
+  width: 90%; 
+}
+
+ nav ul {
+    margin: 5px;
+    padding: 5px;
+  }
+
+    nav ul li {
+      display: inline-block;
+      list-style-type: none;
+     padding-right: 10px;
+    }
+
+
+ #container {
+	position: relative;
+	margin:0 auto;
+	width: 768px;
+}
+
+#head {
+	position:relative;
+	float:left;
+	width: 768px;
+	height:100px;
+}
+
+#geraete {
+	position:relative;
+	float:left;
+	padding:5px;
+	width: 300px;
+	min-height: 100px;
+	border: solid 1px #CCC;
+	background-color: #FEFEFE;
+	margin:5px;
+}
+
+#recyclinghof {
+	position:relative;
+	float:left;
+	padding:5px;
+	width: 300px;
+	min-height: 100px;
+	border: solid 1px #CCC;
+	background-color: #FEFEFE;
+	margin:5px;
+}
+ 
+p { 
+margin:0px 0px 5px 0px;
+padding:0px;
+}
+
+ul {
+	margin:5px;
+	padding: 0px 0px 0px 10px;
+	list-style-type:square;
+}
+
+li {
+margin:0px;
+padding: 0px;
+}
+</pre>
+<h4>8.1.2 Anlegen von Variablen</h4>
+<p>Zur leichteren Verarbeitung der Datenbank haben wir die Variablen für einzelnen Listen angelegt. Im späteren Verlauf wurden weitere Variablen angelegt</p>
+<pre>&lt;xsl:variable name="geraete" select="/datenbank/geraeteListe" /&gt;
+&lt;xsl:variable name="hersteller" select="/datenbank/herstellerListe" /&gt;
+&lt;xsl:variable name="kunden" select="/datenbank/kundenListe" /&gt;
+&lt;xsl:variable name="recyclinghof" select="/datenbank/recyclinghofListe" /&gt;</pre>
+<h3><a name="xslt-geraeteliste" id="xslt-geraeteliste"></a>8.2 Geräteliste</h3>
 <p>Anzeige aller Geräte im Bestand mit Angabe von Verschmutzungsgrad, Bestandteilen und dem Recyclinggrad. Der Recyclinggrad wird für jedes Geräte berechnet.</p>
 <pre>&lt;xsl:value-of 
 select="format-number(sum(bestandteile/bestandteil/@recyclinggrad) 
@@ -754,21 +950,21 @@ count(bestandteile/bestandteil), '###,###,##0.00')"
   </figure> 
 </p>
 
-<h3><a name="xslt-herstelleruebersicht" id="xslt-herstelleruebersicht"></a>8.2 Herstellerübersicht</h3>
+<h3><a name="xslt-herstelleruebersicht" id="xslt-herstelleruebersicht"></a>8.3 Herstellerübersicht</h3>
 <p>
   <figure> 
     <img src="img/kundenliste.png" alt="Kundenliste" />
     <figcaption><span>Abbildung 8: <abbr title="Herstellerliste">Herstellerliste</abbr></span></figcaption>
   </figure> 
 </p>
-<h3><a name="xslt-kundenliste" id="xslt-kundenliste"></a>8.3 Kundenliste</h3>
+<h3><a name="xslt-kundenliste" id="xslt-kundenliste"></a>8.4 Kundenliste</h3>
 <p>
   <figure> 
     <img src="img/kundenliste.png" alt="Kundenliste" />
     <figcaption><span>Abbildung 9: <abbr title="Geräteliste">Kundenliste</abbr></span></figcaption>
   </figure> 
 </p>
-<h3><a name="xslt-kundenrecyclinghof" id="xslt-kundenrecyclinghof"></a>8.4 Übersicht Kunden-Recyclinghof</h3>
+<h3><a name="xslt-kundenrecyclinghof" id="xslt-kundenrecyclinghof"></a>8.5 Übersicht Kunden-Recyclinghof</h3>
 <p>
   <figure> 
     <img src="img/kundenliste.png" alt="Kundenliste" />
@@ -776,7 +972,7 @@ count(bestandteile/bestandteil), '###,###,##0.00')"
   </figure> 
 </p>
 
-<h3><a name="xslt-probleme" id="xslt-probleme"></a>8.5 Probleme und Herausforderungen bei der Entwicklung der Views</h3>
+<h3><a name="xslt-probleme" id="xslt-probleme"></a>8.6 Probleme und Herausforderungen bei der Entwicklung der Views</h3>
 <p>
   <figure> 
     <img src="img/ChromeError.png" alt="Fehler Chrome Browser" />
